@@ -1,3 +1,5 @@
+        * tools/gl_info.py: add pyglet version and platform info
+
 1.2alpha1
 	The major 1.2 release brings pyglet to Python 3. Pyglet now also runs on
 	64-bit operating systems Linux, Windows and OS X. The OS X layer has
